force-app/main/default/objects/eCard_Discrepancy_Comment__x/eCard_Discrepancy_Comment__x.object-meta.xml
<CustomObject>
    <description>dw_view_ecard$ecard_discrepancy_comment</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$ecard_discrepancy_comment</externalName>
    <label>eCard_Discrepancy_Comment</label>
    <pluralLabel>eCard_Discrepancy_Comment</pluralLabel>
</CustomObject>