force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/ac_system_pdi__c.field-meta.xml
<CustomField>
    <fullName>ac_system_pdi__c</fullName>
    <description>ac_system_pdi</description>
    <externalDeveloperName>ac_system_pdi</externalDeveloperName>
    <label>ac_system_pdi</label>
    <length>200</length>
    <type>Text</type>
</CustomField>