force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/assigend_qc__c.field-meta.xml
<CustomField>
    <fullName>assigend_qc__c</fullName>
    <description>assigend_qc</description>
    <externalDeveloperName>assigend_qc</externalDeveloperName>
    <label>assigend_qc</label>
    <length>254</length>
    <type>Text</type>
</CustomField>