force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/bus__c.field-meta.xml
<CustomField>
    <fullName>bus__c</fullName>
    <description>bus</description>
    <externalDeveloperName>bus</externalDeveloperName>
    <label>bus</label>
    <length>18</length>
    <type>Text</type>
</CustomField>