force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/bus_no__c.field-meta.xml
<CustomField>
    <fullName>bus_no__c</fullName>
    <description>bus_no</description>
    <externalDeveloperName>bus_no</externalDeveloperName>
    <label>bus_no</label>
    <length>100</length>
    <type>Text</type>
</CustomField>