force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/bus_start_date__c.field-meta.xml
<CustomField>
    <fullName>bus_start_date__c</fullName>
    <description>bus_start_date</description>
    <externalDeveloperName>bus_start_date</externalDeveloperName>
    <label>bus_start_date</label>
    <type>Date</type>
</CustomField>