force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/coach_number__c.field-meta.xml
<CustomField>
    <fullName>coach_number__c</fullName>
    <description>coach_number</description>
    <externalDeveloperName>coach_number</externalDeveloperName>
    <label>coach_number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>