force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/commented_by__c.field-meta.xml
<CustomField>
    <fullName>commented_by__c</fullName>
    <description>commented_by</description>
    <externalDeveloperName>commented_by</externalDeveloperName>
    <label>commented_by</label>
    <length>254</length>
    <type>Text</type>
</CustomField>