force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/current_workcenter__c.field-meta.xml
<CustomField>
    <fullName>current_workcenter__c</fullName>
    <description>current_workcenter</description>
    <externalDeveloperName>current_workcenter</externalDeveloperName>
    <label>current_workcenter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>