force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <description>department</description>
    <externalDeveloperName>department</externalDeveloperName>
    <label>department</label>
    <length>200</length>
    <type>Text</type>
</CustomField>