force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/discrepancy_status__c.field-meta.xml
<CustomField>
    <fullName>discrepancy_status__c</fullName>
    <description>discrepancy_status</description>
    <externalDeveloperName>discrepancy_status</externalDeveloperName>
    <label>discrepancy_status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>