force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/foreman3__c.field-meta.xml
<CustomField>
    <fullName>foreman3__c</fullName>
    <description>foreman3</description>
    <externalDeveloperName>foreman3</externalDeveloperName>
    <label>foreman3</label>
    <length>254</length>
    <type>Text</type>
</CustomField>