force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/has_issue_reopened__c.field-meta.xml
<CustomField>
    <fullName>has_issue_reopened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has_issue_reopened</description>
    <externalDeveloperName>has_issue_reopened</externalDeveloperName>
    <label>has_issue_reopened</label>
    <type>Checkbox</type>
</CustomField>