force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/modified_by__c.field-meta.xml
<CustomField>
    <fullName>modified_by__c</fullName>
    <description>modified_by</description>
    <externalDeveloperName>modified_by</externalDeveloperName>
    <label>modified_by</label>
    <length>254</length>
    <type>Text</type>
</CustomField>