force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/raised_by__c.field-meta.xml
<CustomField>
    <fullName>raised_by__c</fullName>
    <description>raised_by</description>
    <externalDeveloperName>raised_by</externalDeveloperName>
    <label>raised_by</label>
    <length>254</length>
    <type>Text</type>
</CustomField>