force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/raised_status_updated_date__c.field-meta.xml
<CustomField>
    <fullName>raised_status_updated_date__c</fullName>
    <description>raised_status_updated_date</description>
    <externalDeveloperName>raised_status_updated_date</externalDeveloperName>
    <label>raised_status_updated_date</label>
    <type>DateTime</type>
</CustomField>