force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/resolved_status_updated_date__c.field-meta.xml
<CustomField>
    <fullName>resolved_status_updated_date__c</fullName>
    <description>resolved_status_updated_date</description>
    <externalDeveloperName>resolved_status_updated_date</externalDeveloperName>
    <label>resolved_status_updated_date</label>
    <type>DateTime</type>
</CustomField>