force-app/main/default/objects/eCard_Discrepancy_Comment__x/fields/workcenter__c.field-meta.xml
<CustomField>
    <fullName>workcenter__c</fullName>
    <description>workcenter</description>
    <externalDeveloperName>workcenter</externalDeveloperName>
    <label>workcenter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>